[DATALAD] modified subdataset properties

--- a/.gitmodules
+++ b/.gitmodules
@@ -11,7 +11,7 @@
 	path = sourcedata/raw
 	url = https://github.com/OpenNeuroDatasets/ds001357.git
 	datalad-id = 46168628-8a44-11e8-b69d-0242ac120019
-	datalad-url = https://github.com/OpenNeuroDatasets/ds001357.git
+	datalad-url = /scratch1/03201/jbwexler/openneuro_derivatives/raw/ds001357
 [submodule "sourcedata/templateflow"]
 	path = sourcedata/templateflow
 	url = https://github.com/templateflow/templateflow.git
